--- a/Animations/index.css
+++ b/Animations/index.css
@@ -12,6 +12,7 @@ body{
     transform: translate(-50%,-50%);
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+    transition: 2s;
 }
 
 .center::before{
@@ -50,6 +51,7 @@ body{
     height: 100%;
     background: linear-gradient(to bottom, #0c002b,#1779ff);
     animation: anim2 2s linear infinite;
+    animation-delay: 1s;
 }
 
 @keyframes anim2 {
@@ -69,6 +71,7 @@ body{
     height: 2px;
     background: linear-gradient(to left, #0c002b,#1779ff);
     animation: anim3 2s linear infinite;
+    animation-delay: 3s;
 }
 
 @keyframes anim3 {
@@ -88,6 +91,7 @@ body{
     height: 100%;
     background: linear-gradient(to top, #0c002b,#1779ff);
     animation: anim4 2s linear infinite;
+    animation-delay: 4s;
 }
 
 @keyframes anim4 {
@@ -97,4 +101,14 @@ body{
     100%{
         transform: translatY(-100%);
     }
+}
+
+.center:hover{
+    background: #EEE818;
+    box-shadow: 0px 25px 50px #EEE818;
+    color: black;
+}
+
+.center:hover span{
+    background: #ee6618;
 }
